--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,5 +1,34 @@
+.visible{
+  width: 100%;
+  height: 110%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 100;
+}
+
+.hidden{
+    display: none;
+}
+
+.crossButton {
+  position: absolute;
+  top: 34%;
+  right: 41%;
+  margin: 10px;
+  cursor: pointer;
+  color: black;
+  font-size: 1.5rem;
+  z-index: 999;
+}
+
 .form_main {
-    width: 220px;
+    width: 20%;
+    height: 35%;
+    border-radius: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,7 +45,7 @@
     content: "";
     width: 300px;
     height: 300px;
-    background-color: rgb(92 141 255 / 29%);
+    background-color: rgba(108, 108, 108, 0.29);
     transform: rotate(45deg);
     left: -180px;
     bottom: 30px;
