--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,6 +10,9 @@
     align-items: center;
     height: 7vh;
     border-bottom: 1px solid #2e2e2e73;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 .logo{
     display: flex;
